--- a/src/css/main.css
+++ b/src/css/main.css
@@ -12,3 +12,47 @@ img,
 video {
   display: block;
 }
+
+body {
+  color: #fff;
+  font-family: Lato;
+  font-size: 22px;
+  margin: 50px;
+}
+
+.inscription {
+  display: flex;
+  width: 300px;
+  height: 80px;
+  transform: rotate(-4deg);
+  justify-content: center;
+  align-items: center;
+  flex-shrink: 0;
+  border-radius: 10px;
+  background: #f124f2;
+  box-shadow: 0px 7px 0px 0px #a819a8;
+}
+
+.newsletter {
+  display: flex;
+  width: 320px;
+  height: 70px;
+  transform: rotate(6deg);
+  justify-content: center;
+  align-items: center;
+  flex-shrink: 0;
+  border-radius: 35px;
+  background: #684bd4;
+  margin-top: 120px;
+}
+
+.addtocart {
+  display: inline-flex;
+  padding: 25px 30px;
+  justify-content: center;
+  align-items: flex-end;
+  gap: 10px;
+  background: #00b47e;
+  box-shadow: 2px 2px 4px 0px rgba(0, 0, 0, 0.25);
+  margin-top: 100px;
+}
